Adding Logging/Figure Drawing for loss conv.

--- a/values/default_config.json
+++ b/values/default_config.json
@@ -11,12 +11,13 @@
   "num_epochs": 1000,
   "num_classes": 4,
   "dropout_rate": 0.2,
+  "batch_size": 10,
   "num_iter_per_train_epoch": 50,
   "num_iter_per_test_epoch": 50,
   "learning_rate": 0.001,
   "num_defect_types": 4,
   "input_shape": [1024, 576, 6],
-  "output_shape_2d": [16, 9],
+  "model_output_size": [16, 9, 9],
   "conv_filters": [16, 16, 24, 24, 32, 32],
   "conv_filter_size": 3,
   "max_pooling_size": 2,
