--- a/values/default_config.json
+++ b/values/default_config.json
@@ -1,8 +1,8 @@
 {
   "exp_name": "default",
-  "root_train_dir": "../data_loader/data/dummy/train/",
-  "root_test_dir": "../data_loader/data/dummy/test",
-  "image_extension": ".png",
+  "root_train_dir": "./data_loader/data/dummy/train/",
+  "root_test_dir": "./data_loader/data/dummy/test",
+  "image_extension": ".jpg",
   "label_extension": ".json",
   "do_train": true,
   "do_test": true,
@@ -24,12 +24,18 @@
   "num_models_to_save": 5,
   "add_paths_to_system_PATH_var": ["~/homebrew/bin/"],
   "defect_types": [
-    "case",
-    "padding",
-    "color",
-    "font"
+    "_case",
+    "_padding",
+    "_color",
+    "_font"
   ],
   "figure": {
-    "line_width": 3
+    "line_width": 3,
+    "color_map": [
+      [23, 155, 94],
+      [210, 8, 123],
+      [79, 244, 20],
+      [189, 35, 6]
+    ]
   }
 }
