Completed Logging for Input and Label

--- a/values/default_config.json
+++ b/values/default_config.json
@@ -1,24 +1,24 @@
 {
   "exp_name": "default",
   "root_train_dir": "./data_loader/data/dummy/train/",
-  "root_test_dir": "./data_loader/data/dummy/test",
+  "root_test_dir": "./data_loader/data/dummy/test/",
   "image_extension": ".jpg",
   "label_extension": ".json",
   "do_train": true,
   "do_test": true,
   "do_deploy": false,
-  "do_save_model": true,
+  "do_save_model": false,
   "num_epochs": 1000,
   "num_classes": 4,
   "dropout_rate": 0.2,
-  "batch_size": 10,
-  "num_iter_per_train_epoch": 50,
-  "num_iter_per_test_epoch": 50,
+  "batch_size": 2,
+  "num_iter_per_train_epoch": 2,
+  "num_iter_per_test_epoch": 2,
   "learning_rate": 0.001,
   "num_defect_types": 4,
-  "input_shape": [1024, 576, 6],
-  "model_output_size": [16, 9, 9],
-  "conv_filters": [16, 16, 24, 24, 32, 32],
+  "input_shape": [2220, 1080, 6],
+  "model_output_size": [30, 12, 9],
+  "conv_filters": [16, 16, 24, 24, 32, 9],
   "conv_filter_size": 3,
   "max_pooling_size": 2,
   "num_models_to_save": 5,
@@ -30,7 +30,7 @@
     "_font"
   ],
   "figure": {
-    "line_width": 3,
+    "line_width": 5,
     "color_map": [
       [23, 155, 94],
       [210, 8, 123],
