added optimizer and removed l2

--- a/values/default_config.json
+++ b/values/default_config.json
@@ -7,14 +7,15 @@
   "do_train": true,
   "do_test": true,
   "do_deploy": false,
-  "do_save_model": false,
-  "num_epochs": 1000,
+  "do_save_model": true,
+  "do_restore_model": false,
+  "num_epochs": 100000,
   "num_classes": 4,
   "dropout_rate": 0.2,
   "batch_size": 2,
   "num_iter_per_train_epoch": 2,
   "num_iter_per_test_epoch": 2,
-  "learning_rate": 0.001,
+  "learning_rate": 0.000001,
   "num_defect_types": 4,
   "input_shape": [2220, 1080, 6],
   "model_output_size": [30, 12, 9],
@@ -23,6 +24,10 @@
   "max_pooling_size": 2,
   "num_models_to_save": 5,
   "add_paths_to_system_PATH_var": ["~/homebrew/bin/"],
+  "loss": {
+    "l2_scalar": 0,
+    "sigmoid_scalar": 1
+  },
   "defect_types": [
     "_case",
     "_padding",
