--- a/values/overfit_config.json
+++ b/values/overfit_config.json
@@ -1,5 +1,5 @@
 {
-  "exp_name": "default",
+  "exp_name": "overfit",
   "root_train_dir": "./data_loader/data/dummy/train/",
   "root_test_dir": "./data_loader/data/dummy/test/",
   "image_extension": ".jpg",
@@ -8,14 +8,14 @@
   "do_test": true,
   "do_deploy": false,
   "do_save_model": true,
-  "do_restore_model": false,
+  "do_restore_model": true,
   "num_epochs": 100000,
   "num_classes": 4,
   "dropout_rate": 0.2,
   "batch_size": 1,
   "num_iter_per_train_epoch": 1,
   "num_iter_per_test_epoch": 1,
-  "learning_rate": 0.000001,
+  "learning_rate": 0.0001,
   "num_defect_types": 4,
   "input_shape": [2220, 1080, 6],
   "model_output_size": [30, 12, 9],
